Load music.json before app.listen and populate the mongo database's song collection with it

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/frankliu81/koatest#readme",
   "dependencies": {
     "koa": "^1.2.0",
-    "koa-router": "^5.4.0"
+    "koa-router": "^5.4.0",
+    "mongoose": "^4.5.2"
   }
 }
