--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "koa": "^1.2.0",
     "koa-router": "^5.4.0",
-    "mongoose": "^4.5.2"
+    "mongoose": "^4.5.2",
+    "mongoose-auto-increment": "^5.0.1"
   }
 }
