Add mocha test to populate user and songs listened to via the listen API

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/frankliu81/koatest#readme",
   "dependencies": {
+    "async": "^2.0.0-rc.6",
+    "bluebird": "^3.4.1",
     "chai": "^3.5.0",
     "expect.js": "^0.3.1",
     "koa": "^1.2.0",
